--- a/UserManagementMVCExample/Views/Home/Index.cshtml
+++ b/UserManagementMVCExample/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Lotus Sushi</h1>
+    <i>Delivering happiness to your home.</i>
+    <p>Lotus Sushi is a sample ASP.NET Core Web Application for sushi delivery.</p>
 </div>
