--- a/UserManagementMVCExample/Views/UserRoles/Index.cshtml
+++ b/UserManagementMVCExample/Views/UserRoles/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>User Roles</h1>
+<h2>Users</h2>
 <table class="table table-striped">
     <thead>
         <tr>
