--- a/UserManagementMVCExample/Views/Combos/Edit.cshtml
+++ b/UserManagementMVCExample/Views/Combos/Edit.cshtml
@@ -13,6 +13,14 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <div class="form-group text-center">
+                <img id="ImagePreview"  class="border-info rounded-circle" style="max-width: 150px" />
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageURL" class="control-label"></label>
+                <input asp-for="ImageURL" class="form-control" />
+                <span asp-validation-for="ImageURL" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -27,6 +35,33 @@
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <table>
+                        <tr>
+                            @{
+                                int cnt = 0;
+                                List<UserManagementMVCExample.Models.AssignedSushiDataViewModel> sushis = ViewBag.Sushis;
+
+                                foreach (var sushi in sushis)
+                                {
+                                    if (cnt++ % 1 == 0)
+                                    {
+                                        @:</tr><tr>
+                                    }
+                                @:<td>
+                                <input class="form-check-input" type="checkbox"
+                                       name="selectedSushis"
+                                       value="@sushi.SushiID"
+                                       @(Html.Raw(sushi.Assigned ? "checked=\"checked\"" : "")) />
+                                       @sushi.SushiID @:  @sushi.Name
+                                @:</td>
+                            }
+                        @:</tr>
+                        }
+                    </table>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
