Abstract Class Product

--- a/UserManagementMVCExample/Views/Combos/Index.cshtml
+++ b/UserManagementMVCExample/Views/Combos/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model UserManagementMVCExample.Models.ComboIndexDataViewModel
+﻿@using UserManagementMVCExample.Models.ViewModels
+@model ComboIndexDataViewModel
 
 @{
     ViewData["Title"] = "Index";
