--- a/UserManagementMVCExample/Views/Shared/_Layout.cshtml
+++ b/UserManagementMVCExample/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                 </div>
                             </li>
                         }
-                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
