--- a/UserManagementMVCExample/Views/UserRoles/Index.cshtml
+++ b/UserManagementMVCExample/Views/UserRoles/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using UserManagementMVCExample.Models
-@model List<UserManagementMVCExample.Models.UserRolesViewModel>
+﻿@using UserManagementMVCExample.Models.ViewModels
+@model List<UserRolesViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
