--- a/UserManagementMVCExample/Views/Combos/Create.cshtml
+++ b/UserManagementMVCExample/Views/Combos/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model UserManagementMVCExample.Models.Combo
+﻿@using UserManagementMVCExample.Models.ViewModels
+@model UserManagementMVCExample.Models.Combo
 
 @{
     ViewData["Title"] = "Create";
@@ -11,52 +12,57 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Count" class="control-label"></label>
-                <input asp-for="Count" class="form-control" />
-                <span asp-validation-for="Count" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <table>
-                        <tr>
-                            @{
-                                int cnt = 0;
-                                List<AssignedSushiDataViewModel> sushis = ViewBag.Sushis;
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Count" class="control-label"></label>
+                        <input asp-for="Count" class="form-control" />
+                        <span asp-validation-for="Count" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Price" class="control-label"></label>
+                        <input asp-for="Price" class="form-control" />
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <table>
+                                <tr>
+                                    @{      
+                                        int cnt = 0;
+                                        List<AssignedSushiDataViewModel> sushis = ViewBag.Sushis;
 
-                                foreach (var sushi in sushis)
-                                {
-                                    if (cnt++ % 1 == 0)
-                                    {
-                                    @:</tr><tr>
-                                    }
-                                    @:<td>
-                                        <input class="form-check-input" type="checkbox"
-                                               name="selectedSushis"
-                                               value="@sushi.SushiID"
-                                               @(Html.Raw(sushi.Assigned ? "checked=\"checked\"" : "")) />
-                                        @sushi.SushiID @:  @sushi.Name
-                                    @:</td>
+                                        foreach (var sushi in sushis)
+                                        {
+                                            if (cnt++ % 1 == 0)
+                                            {
+                                                @:</tr><tr>
+                                            }
+                                            @:<td>
+                                                <input class="form-check-input" type="checkbox"
+                                                    name="selectedSushis"
+                                                    value="@sushi.SushiID"
+                                                    @(Html.Raw(sushi.Assigned ? "checked=\"checked\"" : "")) />
+                                                @sushi.SushiID @:  @sushi.Name
+                                            @:</td>
+                                        }
+                                @:</tr>
                                 }
-                        @:</tr>
-                        }
-                    </table>
-                </div>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
         </form>
     </div>
 </div>
