--- a/UserManagementMVCExample/Views/Combos/Edit.cshtml
+++ b/UserManagementMVCExample/Views/Combos/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model UserManagementMVCExample.Models.Combo
+﻿@using UserManagementMVCExample.Models.ViewModels
+@model UserManagementMVCExample.Models.Combo
 
 @{
     ViewData["Title"] = "Edit";
@@ -9,62 +10,84 @@
 <h4>Combo</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group text-center">
-                <img id="ImagePreview"  class="border-info rounded-circle" style="max-width: 150px" />
-            </div>
-            <div class="form-group">
-                <label asp-for="ImageURL" class="control-label"></label>
-                <input asp-for="ImageURL" class="form-control" />
-                <span asp-validation-for="ImageURL" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Count" class="control-label"></label>
-                <input asp-for="Count" class="form-control" />
-                <span asp-validation-for="Count" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <table>
-                        <tr>
-                            @{
-                                int cnt = 0;
-                                List<UserManagementMVCExample.Models.AssignedSushiDataViewModel> sushis = ViewBag.Sushis;
-
-                                foreach (var sushi in sushis)
-                                {
-                                    if (cnt++ % 1 == 0)
+    <div class="col-md-6">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
+            <div class="row">
+                <div class="col-md-6">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" asp-for="Id" />
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Count" class="control-label"></label>
+                        <input asp-for="Count" class="form-control" />
+                        <span asp-validation-for="Count" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Price" class="control-label"></label>
+                        <input asp-for="Price" class="form-control" />
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <table>     
+                                <tr>@{
+                                    int cnt = 0;
+                                    List<AssignedSushiDataViewModel> sushis = ViewBag.Sushis;
+    
+                                    foreach (var sushi in sushis)
                                     {
-                                        @:</tr><tr>
+                                        if (cnt++ % 1 == 0)
+                                        {
+                                            @:</tr><tr>
+                                        }
+                                    @:<td>
+                                    <input class="form-check-input" type="checkbox"
+                                        name="selectedSushis"
+                                        value="@sushi.SushiID"
+                                        @(Html.Raw(sushi.Assigned ? "checked=\"checked\"" : "")) />
+                                        @sushi.SushiID @:  @sushi.Name
+                                    @:</td>
                                     }
-                                @:<td>
-                                <input class="form-check-input" type="checkbox"
-                                       name="selectedSushis"
-                                       value="@sushi.SushiID"
-                                       @(Html.Raw(sushi.Assigned ? "checked=\"checked\"" : "")) />
-                                       @sushi.SushiID @:  @sushi.Name
-                                @:</td>
-                            }
-                        @:</tr>
-                        }
-                    </table>
+                                @:</tr>
+                                }
+                            </table>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <div class="col-md-6">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="ImageURL" style="width: 100%;"></label>
+                        @if (Model.ImageURL != null)
+                        {
+                            <img id="imageUrl" class="img-fluid" alt="Combo image" src="data:image/*;base64,@(Convert.ToBase64String(Model.ImageURL))">
+                        }
+                        else
+                        {
+                            <img id="imageUrl" class="img-fluid" alt="Combo image" src="">
+                        }
+                        <input type="file"
+                               accept=".png,.jpg,.jpeg,.gif,.tif"
+                               asp-for="ImageURL"
+                               class="form-control form-control-sm"
+                               id="formFileSm"
+                               style="border:0px!important;padding: 0px;padding-top: 0px;padding-bottom: 80px;"
+                               onchange="document.getElementById('imageUrl').src = window.URL.createObjectURL(this.files[0])" />
+                        <span asp-validation-for="ImageURL" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
