--- a/UserManagementMVCExample/Views/Desserts/Edit.cshtml
+++ b/UserManagementMVCExample/Views/Desserts/Edit.cshtml
@@ -9,8 +9,10 @@
 <h4>Dessert</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+    <div class="col-md-6">
+        <form asp-action="Edit" method="post" enctype="multipart/form-data">
+            <div class="row">
+                <div class="col-md-6">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -35,6 +37,30 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+                </div>
+                <div class="col-md-6">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="ImageURL" style="width: 100%;"></label>
+                        @if (Model.ImageURL != null)
+                        {
+                            <img id="imageUrl" class="img-fluid" alt="Dessert image" src="data:image/*;base64,@(Convert.ToBase64String(Model.ImageURL))">
+                        }
+                        else
+                        {
+                            <img id="imageUrl" class="img-fluid" alt="Dessert image" src="">
+                        }
+                        <input type="file"
+                               accept=".png,.jpg,.jpeg,.gif,.tif"
+                               asp-for="ImageURL"
+                               class="form-control form-control-sm"
+                               id="formFileSm"
+                               style="border:0px!important;padding: 0px;padding-top: 0px;padding-bottom: 80px;"
+                               onchange="document.getElementById('imageUrl').src = window.URL.createObjectURL(this.files[0])" />
+                        <span asp-validation-for="ImageURL" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
