--- a/UserManagementMVCExample/Views/Shared/Error.cshtml
+++ b/UserManagementMVCExample/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@using UserManagementMVCExample.Models.ViewModels
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
