--- a/UserManagementMVCExample/Views/UserRoles/Manage.cshtml
+++ b/UserManagementMVCExample/Views/UserRoles/Manage.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ManageUserRolesViewModel>
+﻿@using UserManagementMVCExample.Models.ViewModels
+@model List<ManageUserRolesViewModel>
 @{
     ViewData["Title"] = "Manage";
     Layout = "~/Views/Shared/_Layout.cshtml";
