--- a/UserManagementMVCExample/Views/Shared/_Layout.cshtml
+++ b/UserManagementMVCExample/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Menu">Menu</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SushiMenu" asp-action="Index">Menu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -56,6 +56,7 @@
                                 </div>
                             </li>
                         }
+                        <!-- <li></*await Component.InvokeAsync("CartSummary")</li> -->
                     </ul>
                 </div>
             </div>
