Full Products Menu List

--- a/UserManagementMVCExample/Views/Shared/Components/CartSummary/Default.cshtml
+++ b/UserManagementMVCExample/Views/Shared/Components/CartSummary/Default.cshtml
@@ -1,4 +1,5 @@
 ﻿@Html.ActionLink("Cart (" + ViewData["CartCount"] + ")",
     "Index",
     "ShoppingCart",
-    new { id = "cart-status" })
+    null,
+    new { @class = "nav-link text-dark" })
