--- a/UserManagementMVCExample/Views/Shared/_Layout.cshtml
+++ b/UserManagementMVCExample/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SushiMenu" asp-action="Index">Menu</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductsMenu" asp-action="Index">Menu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -32,7 +32,7 @@
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="bi bi-gear"></i> Management
+                                    <i class="bi bi-gear"></i> Administration
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,7 +56,6 @@
                                 </div>
                             </li>
                         }
-                        <!-- <li></*await Component.InvokeAsync("CartSummary")</li> -->
                     </ul>
                 </div>
             </div>
