--- a/UserManagementMVCExample/Views/Shared/_LoginPartial.cshtml
+++ b/UserManagementMVCExample/Views/Shared/_LoginPartial.cshtml
@@ -18,6 +18,9 @@
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
+
+    </li>
+    <li class="nav-item">@await Component.InvokeAsync("CartSummary")
     </li>
 }
 else
