--- a/UserManagementMVCExample/Views/Sushis/Create.cshtml
+++ b/UserManagementMVCExample/Views/Sushis/Create.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" asp-items="Html.GetEnumSelectList<SushiType>()" class="mr-5"></select>
+                <select asp-for="Type" asp-items="Html.GetEnumSelectList<SushiType>()" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
