Orders and Payment

--- a/UserManagementMVCExample/Views/ProductsMenu/Index.cshtml
+++ b/UserManagementMVCExample/Views/ProductsMenu/Index.cshtml
@@ -47,6 +47,7 @@
 }
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
+<link href="/css/menu.css" rel="stylesheet" />
 <h1 class="text-center">Menu</h1>
 
 <div class="container ">
