--- a/UserManagementMVCExample/Views/Favourites/Index.cshtml
+++ b/UserManagementMVCExample/Views/Favourites/Index.cshtml
@@ -50,8 +50,9 @@
 }
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" />
-<h1 class="text-center">Favourites</h1>
+<link href="/css/menu.css" rel="stylesheet" />
 
+<h1 class="text-center">Favourites</h1>
 
 <div class="container ">
     <div class="row">
