--- a/UserManagementMVCExample/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/UserManagementMVCExample/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -5,6 +5,7 @@
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
 <ul class="nav nav-pills flex-column">
+    <li class="nav-item"><a class="nav-link @ManageNavPages.OrdersNavClass(ViewContext)" id="orders" asp-controller="Order" asp-action="Index">Orders</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.FavouritesNavClass(ViewContext)" id="favourites" asp-controller="Favourites" asp-action="Index">Favourites</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
